--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -183,27 +183,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.quantamagazine.org/the-math-of-causation-puzzle-20180530/">The Slippery Math of Causation</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17189673">19 comments</a> &nbsp;•&nbsp;
-                                    <strong><a
-                                            href="https://news.ycombinator.com/user?id=dfee">dfee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527701417"
-                                       class="submissionTimestamp">2018-05-30 17:30:17</a> &nbsp;•&nbsp;
-                                    97 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://research.swtch.com/vgo-eng">What is Software Engineering?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -288,15 +267,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cnet.com/news/google-spinoff-dandelion-uses-ground-energy-to-heat-and-cool-homes/?ftag=COS-05-10aaa0b&linkId=52352248#ftag=CAD590a51e">Google spinoff Dandelion uses ground energy to heat and cool homes</a>
+                                    <a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Signed Integers Are Two’s Complement</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17187400">58 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17190864">37 comments</a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527686285"
-                                       class="submissionTimestamp">2018-05-30 13:18:05</a> &nbsp;•&nbsp;
+                                            href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527708323"
+                                       class="submissionTimestamp">2018-05-30 19:25:23</a> &nbsp;•&nbsp;
                                     80 points
                                 </span>
                             </td>
@@ -309,16 +288,16 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Signed Integers Are Two’s Complement</a>
+                                    <a href="https://www.cnet.com/news/google-spinoff-dandelion-uses-ground-energy-to-heat-and-cool-homes/?ftag=COS-05-10aaa0b&linkId=52352248#ftag=CAD590a51e">Google spinoff Dandelion uses ground energy to heat and cool homes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17190864">35 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17187400">58 comments</a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527708323"
-                                       class="submissionTimestamp">2018-05-30 19:25:23</a> &nbsp;•&nbsp;
-                                    79 points
+                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527686285"
+                                       class="submissionTimestamp">2018-05-30 13:18:05</a> &nbsp;•&nbsp;
+                                    80 points
                                 </span>
                             </td>
                         </tr>
@@ -423,7 +402,7 @@
                                             href="https://news.ycombinator.com/user?id=Uberphallus">Uberphallus</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527681438"
                                        class="submissionTimestamp">2018-05-30 11:57:18</a> &nbsp;•&nbsp;
-                                    66 points
+                                    67 points
                                 </span>
                             </td>
                         </tr>
@@ -481,11 +460,32 @@
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17192601">48 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17192601">49 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lego_bot">lego_bot</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527720824"
                                        class="submissionTimestamp">2018-05-30 22:53:44</a> &nbsp;•&nbsp;
+                                    58 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://www.facebook.com/location_history/view/">Facebook Location History View</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17191332">53 comments</a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=jsonne">jsonne</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527711257"
+                                       class="submissionTimestamp">2018-05-30 20:14:17</a> &nbsp;•&nbsp;
                                     57 points
                                 </span>
                             </td>
@@ -535,8 +535,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527746071" id="pageUpdateTimestamp">Last update
-                1527746071</strong>
+            <strong class="fr" data-timestamp="1527746403" id="pageUpdateTimestamp">Last update
+                1527746403</strong>
         </div>
     </div>
 </div>
